--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
-  <link rel="stylesheet" href="../dist/output.css" />
+  <link rel="stylesheet" href="./output.css" />
 
   <script src="./js/main.js" defer></script>
   <!-- <script src="./js/turkce_kelime_listesi.js" ></script> -->
